# jr

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  STATUS.md
.github/workflows/: rust.yml
benches/: benchmaths.rs
docs/: CONVERSION.md  Programming.md
examples/: bench.rs  gen-runlist.rs  gen-tests.rs  ranky-ranks.rs  snapshot.rs  snapshot.txt
examples/benches/: comb.ijs  life.ijs  queens.ijs  sum.ijs  tour.ijs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: scan.rs
src/: adverbs.rs  arrays.rs  cells.rs  char_array.rs  empty.rs  error.rs  eval.rs  lib.rs  main.rs  modifiers.rs  scan.rs  verbs.rs
src/arrays/: arrayable.rs  cow.rs  display.rs  elem.rs  into_vec.rs  maybe_unit.rs  mod.rs  nd_ext.rs  owned.rs  plural.rs  word.rs
src/cells/: flatten.rs  gen_apply.rs  mod.rs
src/ctx/: locales.rs  mod.rs
src/eval/: controls.rs  ctl_if.rs  ctl_loop.rs  ctl_try.rs  mod.rs  semi.rs
src/foreign/: conversion.rs  files.rs  global_param.rs  host.rs  locales.rs  mod.rs  names.rs  scripts.rs  times.rs
src/modifiers/: adverb.rs  conj.rs  mod.rs
src/number/: mod.rs  number.rs  promote.rs
src/plot/: mod.rs
src/scan/: litnum.rs  mod.rs  number.rs  test_weird.rs
src/test_impls/: jsoft_binary.rs  jsoft_runs.rs  mod.rs
src/verbs/: impl_impl.rs  impl_maths.rs  impl_shape.rs  maff.rs  mod.rs  partial.rs  partial_c.rs  primitive.rs  ranks.rs
tests/: agreement.rs  bench.ijs  cells.rs  edge_cases.rs  errors.rs  formatting.ijs  maths.ijs  maths.rs  sanity_checks.rs  smoke.ijs  smoke.rs  smoke.toml  snippets.toml  temp.py
tests/aoc/: aoc2022day01.ijs  aoc2022day02.ijs  aoc2022day03.ijs
tests/snippets/: 001.ijs  (+26 more)
